# skills

./: livekit-agent-tools.skill  livekit-stt-selfhosted.skill  livekit-voice-agent.skill  tts-livekit-plugin.skill
.claude/skills/livekit-stt-selfhosted/assets/api-server/: .env.example  README.md  main.py  requirements.txt
.claude/skills/livekit-stt-selfhosted/assets/plugin-template/: README.md  pyproject.toml
.claude/skills/livekit-stt-selfhosted/assets/plugin-template/livekit/plugins/custom_stt/: __init__.py  stt.py  version.py
.claude/skills/livekit-stt-selfhosted/references/: api_server_guide.md  deployment.md  models_comparison.md  plugin_implementation.md
.claude/skills/livekit-stt-selfhosted/scripts/: setup_api_server.py  setup_plugin.py
livekit-agent-tools/: SKILL.md  requirements.txt
livekit-agent-tools/examples/: agent-handoff-tool.py  api-integration-tool.py  basic-tool.py  long-running-tool.py  stateful-tool.py
livekit-agent-tools/references/: best-practices.md  context-handling.md  dynamic-tools.md
livekit-nextjs-frontend/: README.md  SKILL.md
livekit-nextjs-frontend/examples/: README.md  basic-room.tsx  chat-component.tsx  custom-controls.tsx  prejoin-screen.tsx
livekit-voice-agent/: CHANGELOG.md  README.md  SKILL.md
livekit-voice-agent/assets/examples/: multi_agent_workflow.py  tool_calling_agent.py
livekit-voice-agent/reference/: multi_agent_patterns.md  testing_guide.md
livekit-voice-agent/references/: architecture.md  deployment.md  patterns.md  providers.md
livekit-voice-agent/scripts/: init_agent.py  quickstart.sh  validate_templates.sh
livekit-voice-agent/templates/: .env.example  main_entry_point.py  pyproject.toml
livekit-voice-agent/templates/agents/: __init__.py  escalation_agent.py  specialist_agent.py
livekit-voice-agent/templates/models/: __init__.py
skills-reference/livekit-agent-tools/: .env.example
skills-reference/livekit-agent-tools/assets/: agent-template.py
skills-reference/livekit-agent-tools/examples/: basic-tool.py  stateful-tool.py
skills-reference/livekit-agent-tools/references/: long-running-functions.md  multi-agent-patterns.md  parameter-patterns.md  testing.md
skills-reference/livekit-nextjs-frontend/examples/: README.md  token-api-route.ts
skills-reference/livekit-prompt-builder/: .gitignore  SKILL.md
skills-reference/livekit-prompt-builder/assets/templates/: basic-assistant.txt  customer-service.txt  multi-agent-coordinator.txt  specialist-agent.txt  tool-enabled-agent.txt
skills-reference/livekit-prompt-builder/references/: examples.md  prompt-components.md  tool-integration.md  voice-optimization.md
skills-reference/livekit-prompt-builder/scripts/: validate_prompt.py
skills-reference/livekit-voice-agent/: LICENSE
skills-reference/livekit-voice-agent/assets/examples/: multi_agent_workflow.py  tool_calling_agent.py
skills-reference/livekit-voice-agent/reference/: agent_best_practices.md  multi_agent_patterns.md
skills-reference/livekit-voice-agent/references/: architecture.md  patterns.md  providers.md
skills-reference/livekit-voice-agent/scripts/: init_agent.py  test_agent.py
skills-reference/livekit-voice-agent/templates/: .gitignore  Dockerfile  README_TEMPLATE.md  main_entry_point.py
skills-reference/livekit-voice-agent/templates/agents/: escalation_agent.py  intro_agent.py
skills-reference/livekit-voice-agent/templates/models/: shared_data.py
skills-reference/stt-livekit-plugin/: .env.example  ARCHITECTURE_ANALYSIS.md  CRITICAL_BUGS.md  FINAL_REVIEW.md  FIXES_REQUIRED.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FIX_GUIDE.md  RESEARCH_SUMMARY.md  REVIEW_SUMMARY.md  WEBSOCKET_STT_BEST_PRACTICES.md  docker-compose.yml
skills-reference/stt-livekit-plugin/livekit-plugin-custom-stt/: pyproject.toml
skills-reference/stt-livekit-plugin/livekit-plugin-custom-stt/examples/: voice_agent.py
skills-reference/stt-livekit-plugin/livekit-plugin-custom-stt/livekit/plugins/custom_stt/: stt.py  version.py
skills-reference/stt-livekit-plugin/stt-api/: Dockerfile  README.md  main.py  requirements.txt  test_api.sh
skills-reference/stt-livekit-plugin/tests/: requirements.txt  test_fixes.py  test_integration.py
skills-reference/tts-livekit-plugin/livekit-plugin-custom-tts/: pyproject.toml
skills-reference/tts-livekit-plugin/livekit-plugin-custom-tts/examples/: basic_usage.py  voice_agent.py
skills-reference/tts-livekit-plugin/livekit-plugin-custom-tts/livekit/plugins/custom_tts/: __init__.py  tts.py
skills-reference/tts-livekit-plugin/references/: api-implementation.md  deployment.md  plugin-development.md  tts-models.md
skills-reference/tts-livekit-plugin/tts-api/: .env.example  Dockerfile  main.py  requirements.txt
stt-livekit-plugin/: .gitignore  LICENSE  README.md  TESTING.md  run_tests.sh  skill.md
stt-livekit-plugin/livekit-plugin-custom-stt/: README.md
stt-livekit-plugin/livekit-plugin-custom-stt/examples/: basic_usage.py
stt-livekit-plugin/livekit-plugin-custom-stt/livekit/plugins/custom_stt/: __init__.py  stt.py
stt-livekit-plugin/stt-api/: main.py
stt-livekit-plugin/tests/: README.md
